modified for caTissue-ClinPortal integration and reduced PMD.
SVN-Revision: 23966