@@ -42,7 +42,9 @@ import edu.wustl.catissuecore.domain.pathology.ReportLoaderQueue;
 import edu.wustl.catissuecore.namegenerator.DefaultSCGLabelGenerator;
 import edu.wustl.catissuecore.namegenerator.LabelGenerator;
 import edu.wustl.catissuecore.namegenerator.LabelGeneratorFactory;
+import edu.wustl.catissuecore.util.ClinPortalCaTissueIntegrationUtil;
 import edu.wustl.catissuecore.util.global.AppUtility;
+import edu.wustl.catissuecore.util.global.ClinPortalIntegrationConstants;
 import edu.wustl.catissuecore.util.global.Constants;
 import edu.wustl.catissuecore.util.global.DefaultValueManager;
 import edu.wustl.catissuecore.util.global.Variables;
@@ -78,7 +80,7 @@ public class CaCoreAppServicesDelegator
 {
 
 	/** logger. Looger */
-	private transient final Logger logger = Logger
+	private static transient final Logger LOGGER = Logger
 			.getCommonLogger(CaCoreAppServicesDelegator.class);
 
 	/** Static classList which has PHI attributes. */
@@ -106,16 +108,16 @@ public class CaCoreAppServicesDelegator
 	 *
 	 * @throws Exception exception
 	 */
-	public Boolean delegateLogin(String userName, String password) throws Exception
+	public Boolean delegateLogin(final String userName, String password) throws Exception
 	{
 		final User validUser = AppUtility.getUser(userName);
-		Boolean authenticated = Boolean.valueOf(false);
+		Boolean authenticated = false;
 		if (validUser != null)
 		{
 			password = PasswordManager.encrypt(password);
 			final boolean loginOK = SecurityManagerFactory.getSecurityManager().login(userName,
 					password);
-			authenticated = new Boolean(loginOK);
+			authenticated = loginOK;
 		}
 		return authenticated;
 	}
@@ -150,11 +152,11 @@ public class CaCoreAppServicesDelegator
 			this.checkNullObject(domainObject, "Domain Object");
 			final IBizLogic bizLogic = this.getBizLogic(domainObject.getClass().getName());
 			bizLogic.insert(domainObject, this.getSessionDataBean(userName), 0);
-			this.logger.info(" Domain Object has been successfully inserted " + domainObject);
+			this.LOGGER.info(" Domain Object has been successfully inserted " + domainObject);
 		}
 		catch (final Exception e)
 		{
-			this.logger.error("Delegate Add-->" + e.getMessage(),e);
+			this.LOGGER.error("Delegate Add-->" + e.getMessage(),e);
 			e.printStackTrace();
 			throw e;
 		}
@@ -195,15 +197,15 @@ public class CaCoreAppServicesDelegator
 			dao = AppUtility.openDAOSession(null);
 
 			abstractDomainOld = (AbstractDomainObject) dao.retrieveById(Class.forName(objectName)
-					.getName(), new Long(abstractDomainObject.getId()));
+					.getName(), Long.valueOf(abstractDomainObject.getId()));
 			bizLogic.update(abstractDomainObject, abstractDomainOld, 0, this
 					.getSessionDataBean(userName));
 
-			this.logger.info(" Domain Object has been successfully updated " + domainObject);
+			this.LOGGER.info(" Domain Object has been successfully updated " + domainObject);
 		}
 		catch (final Exception e)
 		{
-			this.logger.error("Delegate Edit" + e.getMessage(),e);
+			this.LOGGER.error("Delegate Edit" + e.getMessage(),e);
 			e.printStackTrace();
 			throw e;
 		}
@@ -295,7 +297,7 @@ public class CaCoreAppServicesDelegator
 		}
 		catch (final SMException ex)
 		{
-			this.logger.error("Review Role not found!"+ex.getMessage(),ex);
+			this.LOGGER.error("Review Role not found!"+ex.getMessage(),ex);
 			ex.printStackTrace();
 		}
 		return isUserisAdmin;
@@ -367,7 +369,7 @@ public class CaCoreAppServicesDelegator
 				catch (final Exception ex)
 				{
 					// Exception occured if Domain Oject is not having ActivityStatus field
-					this.logger.error("in CaCoreAppServicesDelegator" + ex.getMessage());
+					this.LOGGER.error("in CaCoreAppServicesDelegator" + ex.getMessage());
 					ex.printStackTrace();
 					result.add(abstractDomainObject);
 				}
@@ -525,7 +527,7 @@ public class CaCoreAppServicesDelegator
 		}
 		catch (final Exception exp)
 		{
-			this.logger.error(exp.getMessage(), exp);
+			this.LOGGER.error(exp.getMessage(), exp);
 			exp.printStackTrace();
 			throw exp;
 		}
@@ -718,7 +720,7 @@ public class CaCoreAppServicesDelegator
 	{
 		Object childObject = null;
 		fieldName = "get" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1);
-		this.logger.debug("Method Name***********************" + fieldName);
+		this.LOGGER.debug("Method Name***********************" + fieldName);
 
 		try
 		{
@@ -726,17 +728,17 @@ public class CaCoreAppServicesDelegator
 		}
 		catch (final NoSuchMethodException noMetExp)
 		{
-			this.logger.error(noMetExp.getMessage(), noMetExp);
+			this.LOGGER.error(noMetExp.getMessage(), noMetExp);
 			noMetExp.printStackTrace();
 		}
 		catch (final IllegalAccessException illAccExp)
 		{
-			this.logger.error(illAccExp.getMessage(), illAccExp);
+			this.LOGGER.error(illAccExp.getMessage(), illAccExp);
 			illAccExp.printStackTrace();
 		}
 		catch (final InvocationTargetException invoTarExp)
 		{
-			this.logger.error(invoTarExp.getMessage(), invoTarExp);
+			this.LOGGER.error(invoTarExp.getMessage(), invoTarExp);
 			invoTarExp.printStackTrace();
 		}
 
@@ -1030,7 +1032,7 @@ public class CaCoreAppServicesDelegator
 						+ "(IDENTIFIER,IP_ADDRESS,EVENT_TIMESTAMP,USER_ID ,COMMENTS) "
 						+ "values ('" + number + "','" + ipAddr + "',to_date('" + timeStamp
 						+ "','yyyy-mm-dd HH24:MI:SS'),'" + userId + "','" + comments + "')";
-				this.logger.info("sqlForAuditLog:" + sqlForAudiEvent);
+				this.LOGGER.info("sqlForAuditLog:" + sqlForAudiEvent);
 				jdbcDAO.executeUpdate(sqlForAudiEvent);
 
 				long queryNo = 1;
@@ -1084,7 +1086,7 @@ public class CaCoreAppServicesDelegator
 				osw.close();
 				outputStream.close();
 				jdbcDAO.commit();
-				this.logger.info("sqlForQueryLog:" + sqlForQueryLog);
+				this.LOGGER.info("sqlForQueryLog:" + sqlForQueryLog);
 			}
 			else
 			{
@@ -1114,14 +1116,14 @@ public class CaCoreAppServicesDelegator
 				final String sqlForQueryLog = "insert into catissue_audit_event_query_log"
 						+ "(QUERY_DETAILS,AUDIT_EVENT_ID) values ('" + sqlQuery1 + "','" + number
 						+ "')";
-				this.logger.debug("sqlForQueryLog:" + sqlForQueryLog);
+				this.LOGGER.debug("sqlForQueryLog:" + sqlForQueryLog);
 				jdbcDAO.executeUpdate(sqlForQueryLog);
 				jdbcDAO.commit();
 			}
 		}
 		catch (final Exception e)
 		{
-			this.logger.error(e.getMessage(), e);
+			this.LOGGER.error(e.getMessage(), e);
 			e.printStackTrace();
 			throw new Exception(e.getMessage());
 		}
@@ -1223,7 +1225,7 @@ public class CaCoreAppServicesDelegator
 		}
 		catch (final ClassCastException e)
 		{
-			this.logger.error(e.getMessage(), e);
+			this.LOGGER.error(e.getMessage(), e);
 			e.printStackTrace();
 			returnList = rows;
 		}
@@ -1260,11 +1262,11 @@ public class CaCoreAppServicesDelegator
 			this.checkNullObject(domainObject, "Domain Object");
 			final ParticipantBizLogic participantBizLogic = new ParticipantBizLogic();
 			participantBizLogic.registerParticipant(domainObject, cpid, userName);
-			this.logger.info(" Domain Object has been successfully registered " + domainObject);
+			this.LOGGER.info(" Domain Object has been successfully registered " + domainObject);
 		}
 		catch (final Exception e)
 		{
-			this.logger.error("Delegate Add-->" + e.getMessage(),e);
+			this.LOGGER.error("Delegate Add-->" + e.getMessage(),e);
 			e.printStackTrace();
 			throw e;
 		}
@@ -1306,4 +1308,6 @@ public class CaCoreAppServicesDelegator
 		}
 		return filteredMatchingObjects;
 	}
+
+
 }
